# termiipython

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/termii/: Insight.py
tests/: conftest.py  test_auth.py  test_campaign.py  test_contacts.py  test_messaging.py  test_termiipython.py  test_token.py
