[tool.poetry]
name = "termiipython"
version = "1.0.0"
description = "Termii Python Library for Termii API"
authors = ["Solomon Olatunji"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
